# gittemplate

./: .gitignore  Cargo.toml  README.md  Rakefile  default.nix
.github/workflows/: build.yml
examples/: repl.rs
src/: ast.rs  error.rs  eval.rs  lib.rs  macros.rs  macros_gen.py
src/objects/: auto_deref.rs  mod.rs
src/objects/protocol/: attribute.rs  convert.rs  fmt.rs  mod.rs  object.rs  serde_value.rs
src/objects/types/: bool.rs  commit.rs  expr.rs  graph.rs  int.rs  json.rs  lambda.rs  list.rs  mod.rs  nil.rs  path.rs  re.rs  repo.rs  revset.rs  signature.rs  string.rs  time.rs
src/parser/: grammar.lalrpop  grammar.rs  mod.rs
src/pylib/: macros.py
