[package]
name = "gittemplate"
version = "0.1.0"
authors = ["Jun Wu <quark@lihdd.net>"]
edition = "2018"
license = "GPL-2.0-only"
description = "A template language to render git objects."
repository = "https://github.com/quark-zju/gittemplate"

[dependencies]
ansi_term = "0.12"
atty = "0.2"
chrono-humanize = "0.1"
chrono = "0.4"
git2 = "0.13"
gitrevset = "0.2"
hex = "0.4"
lalrpop-util = { version = "0.19", features = ["lexer"] }
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
gitrevset = { version = "0.2", features = ["testutil"] }
tempfile = "3"
termwiz = "0.9"

[features]
default = []